prom/06-prom.yaml

kind: Namespace
apiVersion: v1
metadata:
  name: prometheus
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prometheus
  labels:
    app: prometheus
  namespace: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port:   '9090'
        prometheus.io/path: '/metrics'
    spec:
      containers:
        - name: prom-raspi
          image: prom/prometheus
          args:
            - "--config.file=/app/prometheus.yml"
            - "--storage.tsdb.path=/etc/prometheus/tsdb"
            - "--web.enable-lifecycle"
              #- "--web.route-prefix=/prometheus"
            - "--web.external-url=/prometheus"
          imagePullPolicy: IfNotPresent
            #          command: ["sleep","infinity"]
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus/
            - name: configfile
              mountPath: /app
              readOnly: true
            - name: scrape-configs
              mountPath: /config
          securityContext:
            runAsUser: 0
            privileged: true
            runAsNonRoot: false
            runAsGroup: 0
      volumes:
        - name: config
          hostPath:
            path: /apps
        - name: configfile
          configMap:
            name: prom-config
        - name: blackbox-scrape
          configMap:
            name: blackbox-scrape
        - name: kube-monitoring
          configMap:
            name: kubernetes-monitoring
        - name: scrape-configs
          emptyDir: {}
