prom/prom.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: prometheus
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prometheus
  labels:
    app: prometheus
  namespace: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prom-raspi
          image: prom/prometheus
          args: ["--config.file=/etc/prometheus/prometheus.yml","--storage.tsdb.path=/etc/prometheus/tsdb","--web.enable-lifecycle","--web.route-prefix=/prometheus","--web.external-url=http://raspberrypi.local:30000/prometheus"] 
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus/
          securityContext:
            runAsUser: 0
            privileged: true
      volumes:
        - name: config
          hostPath:
            path: /apps/
