prom/10-blackbox-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: blackbox-exporter-service
  labels:
    app: blackbox
  namespace: blackbox-exporter
spec:
  type: ClusterIP
  selector:
    app: blackbox
  ports:
    - protocol: TCP
      port: 9115
      targetPort: 9115
