prom/prom-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prom-service
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 31900
