prom/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
    #annotations:
    #haproxy.org/path-rewrite: /prometheus/(.*) /\1
      #    haproxy.org/response-header-rewrite: |
      #Location ^/$ /prometheus/
      #Location ^/(.+) /prometheus/\1 
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
        - path: /prometheus
          pathType: Prefix
          backend:
            service:
              name: prom-internal-service
              port:
                number: 9090
                  #    host: "raspberrypi.local"
